# owned-slice

./: Cargo.toml  README.md
src/: iter.rs  lib.rs  util.rs
