[package]
authors = ["Chris Chamberlain <c.chamberlain@iinet.net.au>"]
name = "owned_slice"
keywords = ["owned", "slice", "custom", "VecDeque", "LinkedList"]
description = "Slices (like [T]) for not-necessarily-contiguous data structures."
license = "MIT OR Apache-2.0"
repository = "https://github.com/neon64/owned-slice"
version = "0.1.0"

[dependencies]
num-traits = "0.1"
